--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,10 @@ html(ng-app="myApp")
   head
     meta(charset='utf8')
     base(href='/')
-    title Angular Express Seed App
-    link(rel='stylesheet', href='/css/app.css')
+    title Nigeria NMIS mopup assistant
+    link(rel='stylesheet', href='/css/style.css')
+    link(href="css/bootstrap-combined.min.css" rel="stylesheet")
+    script(src='js/lib/underscore-min.js')
+    script(src='js/lib/jquery-1.9.1.min.js')
   body
     block body
