adding api for data retrieval

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,11 +4,11 @@ html(ng-app="myApp")
     meta(charset='utf8')
     base(href='/')
     title Matching Assistant
-    script(src='js/lib/angular/angular.js')
+    script(src='js/lib/angular/angular.min.js')
     script(src='js/lib/jquery/jquery-2.0.0.min.js')
-    script(src='js/ui-bootstrap-tpls-0.2.0.js')
-    link(rel='stylesheet', href='/css/app.css')
+    script(src='js/lib/ui-bootstrap-tpls-0.2.0.js')
     link(rel='stylesheet', href='/css/bootstrap-combined.min.css')
+    link(rel='stylesheet', href='/css/app.css')
 
   body
     div(ng-controller='AppCtrl')
