use id based indetification instead of lga_name

--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -1,4 +1,96 @@
-p This is the partial for view 2.
-p
-  | Showing of 'interpolate' filter:
-  | {{ 'Current version is v%VERSION%.' | interpolate }}
+html
+  body
+    .row-fluid
+      .span12
+        .row-fluid
+          .span4(name='facility_section', ng-controller='FacilitiesListCtrl')
+            h4  Official LGA facility list ({{facilities.length}})
+            #lga_list
+              .facilities
+                dl
+                  dt  Name:
+                  dd {{facility['Schools.school_name']}}
+                  br
+                  dt  LGA:
+                  dd  {{facility.mylga}}
+                  br
+                  dt  State:
+                  dd  {{facility.mylga_state}}
+                  br
+                  dt  Ward
+                  dd  {{facility['Schools.ward_name']}}
+                  br
+                  dt  Community:
+                  dd  {{facility['Schools.com_name']}}
+                  br
+                  dt  Facility Type:
+                  dd  {{facility['Schools.level_of_education']}}
+                  br
+              // facilities
+              .row-fluid
+                .buttons
+                  .pull-left
+                    button.btn.btn-success(ng-click='previous()') previous
+                  .pull-right
+                    button.btn.btn-danger(ng-click='next()') next
+            // lga_list
+          // span4
+          .span4(ng-controller='NMISListCtrl')
+            | Sort by:
+            .btn-group(data-toggle='buttons-checkbox')
+              button.btn(btn-radio='\"Name\"', ng-model='radioModel', ng-click='predicate = \"facility_name\"; reverse=false')  Name
+              button.btn(btn-radio='\"Type\"', ng-model='radioModel', ng-click='predicate = \"facility_type\"; reverse=false')  Type
+              button.btn(btn-radio='\"Ward\"', ng-model='radioModel', ng-click='predicate = \"ward\"; reverse=false')  Ward
+              button.btn(btn-radio='\"Community\"', ng-model='radioModel', ng-click='predicate = \"community\"; reverse=false')  Community
+            h4  List of facilities in NMIS ({{facilities.length}})
+            #nmis_list
+              .facilities(ng-repeat='facility in facilities | orderBy:predicate:reverse')
+                dl
+                  dt  Name:
+                  dd {{facility.facility_name}}
+                  br
+                  dt  Ward
+                  dd  {{facility.ward}}
+                  br
+                  dt  Community:
+                  dd  {{facility.community}}
+                  br
+                  dt  Facility Type:
+                  dd  {{facility.facility_type}}
+                  br
+                  .row-fluid
+                    button.btn.btn-success(ng-click='match(facility)') Matches!
+                    .pull-right
+                      button.btn.btn-danger(ng-click='fail(facility)') Report a problem
+          .span4
+            h4 Matched List
+              .accordions
+                accordion(close-others='true')
+                  accordion-group(heading='Matched Facility')
+                    div(ng-controller='PairedListCtrl')
+                      #matched_list_{{$index}}
+                      .pairs(ng-repeat='pair in pairs')
+                        dl dt  Facility Name:
+                          dd {{pair[0].facility_name}}
+                          br
+                          dt  Facility Location
+                          dd  {{pair[0].community}}, {{pair[0].ward}}
+                          br
+                          dt  NMIS Name:
+                          dd {{pair[1].facility_name}}
+                          br
+                          dt  NMIS Location
+                          dd  {{pair[1].community}}, {{pair[1].ward}}
+                          br
+                      // facilities
+                  accordion-group(heading='Rejected Facility')
+                    div(ng-controller='RejectedListCtrl')
+                      #rejected_list_{{$index}}
+                      .rejects(ng-repeat='reject in rejects')
+                        dl
+                          dt  NMIS Name:
+                          dd {{reject.facility_name}}
+                          br
+                          dt  NMIS Location
+                          dd  {{reject.community}}, {{reject.ward}}
+                        br
