--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -3,7 +3,7 @@ html
     .row-fluid
       .span12
         .row-fluid
-          .span4(name='facility_section', ng-controller='FacilitiesListCtrl')
+          .span4(name='facility_section', ng-controller='LGAEduCtrl')
             h4  Official LGA facility list ({{facilities.length}})
             #lga_list
               .facilities
@@ -35,7 +35,7 @@ html
                     button.btn.btn-danger(ng-click='next()') next
             // lga_list
           // span4
-          .span4(ng-controller='NMISListCtrl')
+          .span4(ng-controller='NMISEduCtrl')
             | Sort by:
             .btn-group(data-toggle='buttons-checkbox')
               button.btn(btn-radio='\"Name\"', ng-model='radioModel', ng-click='predicate = \"facility_name\"; reverse=false')  Name
