--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,10 +1,52 @@
 body {
-  background-color: #fdf7e3;
-	overflow-x: hidden;
+  background-color: #fafafa;
+	/*overflow-x: hidden;*/
 	padding-left: 5px; padding-right: 5px;
 }
 
-.data h4 {
+.navbar-inner{
+  border: none;
+}
+.navbar-inner.lga{
+  float: left;
+}
+
+.printouts{
+  float: right;
+}
+
+h4{
+  font-weight: normal;
+}
+
+.unmatched{
+  font-weight: normal;
+  color: rgb(178,196,204);
+}
+
+table{
+  background-color: #fafafa;
+}
+
+th:first-child{
+  width: 50px;
+}
+
+tbody tr.active{
+  background-color: rgb(132, 201, 235);
+}
+
+.search{
+  font-weight: normal;
+  float: right;
+}
+input[type="search"]{
+  margin-left: 10px;
+}
+
+
+/*.data h4 {
+  color #ffffff
   text-align: center;
   font-weight: 400; }
 
@@ -20,29 +62,20 @@ body {
 		dt {
 		  display: inline-block; }
 		dd {
-		  display: inline-block; }
+		  display: inline-block; }*/
 
-#nmis_list{
+#nmis_list, #lga_list{
+  background-color: rgb(63,98,116);
   overflow: auto;
+  max-height: 50%;
+  padding: 25px;
 }
-	#nmis_list .facilities{
-	  background-color: white;
-	}
-
-.accordions {
-	background-color: white;
-}
-.accordions .pairs, .accordions .rejects {
-	background-color: aqua;
+  
+#nmis_list h3, #lga_list h3, .search{
+  color: #ffffff;
 }
 
-#match_list .pairs{
-  background-color: white;
+.pairs{
+  border-bottom: 1px solid #ddd;
 }
 
-#lga_list .facilities {
-  background-color:orange;
-}
-	.facility_section {
-	  padding-left:20px;
-	}
