--- a/views/partials/health.jade
+++ b/views/partials/health.jade
@@ -2,9 +2,10 @@ html
   body
     .container-fluid
       .row-fluid
-        .span9
+        .span10
           // facilities_list
           section#lga_list(name='facility_section', ng-controller='LGAHealthCtrl')
+            .inner
               h3 Baseline List
                 span.unmatched &nbsp;({{}} unmatched)
               label.search Search
@@ -20,8 +21,8 @@ html
                     th  Facility Type
                 tbody
                   tr(ng-repeat='facility in facilities | orderBy:predicate:reverse')(ng-click="select()")
-                    td 
-                    td  {{facility['HealthFacilities.id']}}
+                    td  
+                    td  {{$index+1}}
                     td  {{facility['HealthFacilities.ward_name']}}
                     td  {{facility['HealthFacilities.health_facility_name']}}
                     td  {{facility['HealthFacilities.com_name_h']}}
@@ -36,39 +37,45 @@ html
                    button.btn(btn-radio='\"Ward\"', ng-model='radioModel', ng-click='predicate = \"ward\"; reverse=false')  Ward
                    button.btn(btn-radio='\"Community\"', ng-model='radioModel', ng-click='predicate = \"community\"; reverse=false')  Community
           section#nmis_list(ng-controller='NMISHealthCtrl')
-            h3 Facility List
-              span.unmatched &nbsp;({{}} unmatched)
-            label.search Search
-              input(type="search")
-            .guidance Click&nbsp;
-              button.match.no-hover Match
-              | &nbsp;on the matching facility
-            table.table.table-bordered.table-hover
-              thead
-                  th
-                  th  ID
-                  th  Ward
-                  th  Facility Name
-                  th  Community
-                  th  Facility Type
-              tbody
-                tr(ng-repeat='facility in facilities | orderBy:predicate:reverse')
-                  td 
-                    button.match(ng-click='match(facility)') Match
-                  td {{facility.id}}
-                  td {{facility.ward}}
-                  td {{facility.facility_name}}
-                  td {{facility.community}}
-                  td {{facility.facility_type}}
-                  // button.btn.btn-danger(ng-click='fail(facility)') Report a problem
-        section.span3#matches_list(ng-controller='PairedListCtrl')
-        h4 Matched Facilities
-          span.matched-length ({{pairs.length}})
+            .inner
+              h3 Facility List
+                span.unmatched &nbsp;({{}} unmatched)
+              label.search Search
+                input(type="search")
+              .guidance Click&nbsp;
+                button.btn.btn-small.btn-match.no-hover Match
+                | &nbsp;on the matching facility
+              table.table.table-bordered.table-hover
+                thead
+                    th
+                    th  ID
+                    th  Ward
+                    th  Facility Name
+                    th  Community
+                    th  Facility Type
+                tbody
+                  tr(ng-repeat='facility in facilities | orderBy:predicate:reverse')
+                    td 
+                      button.btn.btn-small.btn-match(ng-click='match(facility)') Match
+                    td {{$index+1}}
+                    td {{facility.ward}}
+                    td {{facility.facility_name}}
+                    td {{facility.community}}
+                    td {{facility.facility_type}}
+                    // button.btn.btn-danger(ng-click='fail(facility)') Report a problem
+        section.span2#matches_list(ng-controller='PairedListCtrl')
+          h4 Matched Facilities&nbsp;
+            span.matched-length ({{pairs.length}})
           #matched_list_{{$index}}
             .pairs(ng-repeat='pair in pairs')
+              button.btn.btn-small.putback(ng-click="removePair()")
+               i.icon-putback
               dl 
                 dt {{pair[0].id}}
                 dd {{pair[0].facility_name}}
                 &nbsp;matches&nbsp;
                 dt {{pair[1].id}}
                 dd {{pair[1].facility_name}}
+            div.putback-guidance If you made an error, put facilities back by clicking 
+              button.btn.btn-small.putback
+                i.icon-putback
