--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -8,7 +8,7 @@ html
             h3 Baseline List
               span.unmatched ({{}} unmatched)
             label.search Search
-              input(type="search")
+              input(ng-model="lgaEduSearch")
             table.table.table-bordered.table-hover
               thead
                 tr
@@ -19,7 +19,7 @@ html
                   th  Community
                   th  Facility Type
               tbody
-                tr(ng-repeat='facilty in facilities')(ng-click="select()")
+                tr(ng-repeat='facilty in facilities | orderBy:predicate:reverse | filter:lgaEduSearch')(ng-click="select()")
                   td
                   td {{$index+1}}
                   td {{facility['Schools.ward_name']}}
@@ -41,7 +41,7 @@ html
               h3 Facility List
                 span.unmatched ({{}} unmatched)
               label.search Search
-                input(type="search")
+                input(ng-model='nmisEduSearch')
               .guidance Click&nbsp;
                 button.btn.btn-small.btn-match.no-hover Match
                 | &nbsp;on the matching facility
@@ -54,7 +54,7 @@ html
                     th  Community
                     th  Facility Type
                 tbody
-                  tr(ng-repeat='facility in facilities | orderBy:predicate:reverse')
+                  tr(ng-repeat='facility in facilities | orderBy:predicate:reverse | filter:nmisEduSearch')
                     td 
                       button.btn.btn-small.btn-match(ng-click='match(facility)') Match
                     td {{$index+1}}
