--- a/views/partials/health.jade
+++ b/views/partials/health.jade
@@ -9,7 +9,7 @@ html
               h3 Baseline List
                 span.unmatched ({{}} unmatched)
               label.search Search
-                input(type="search")
+                input(ng-model="lgaHealthSearch")
               table.table.table-bordered.table-hover
                 thead
                   tr
@@ -20,7 +20,7 @@ html
                     th  Community
                     th  Facility Type
                 tbody
-                  tr(ng-repeat='facility in facilities | orderBy:predicate:reverse')(ng-click="select()")
+                  tr(ng-repeat='facility in facilities | orderBy:predicate:reverse | filter:lgaHealthSearch')(ng-click="select()")
                     td  
                     td  {{$index+1}}
                     td  {{facility['HealthFacilities.ward_name']}}
@@ -41,7 +41,7 @@ html
               h3 Facility List
                 span.unmatched ({{}} unmatched)
               label.search Search
-                input(type="search")
+                input(ng-model="nmisHealthSearch")
               .guidance Click&nbsp;
                 button.btn.btn-small.btn-match.no-hover Match
                 | &nbsp;on the matching facility
@@ -54,7 +54,7 @@ html
                     th  Community
                     th  Facility Type
                 tbody
-                  tr(ng-repeat='facility in facilities | orderBy:predicate:reverse')
+                  tr(ng-repeat='facility in facilities | orderBy:predicate:reverse | filter:nmisHealthSearch')
                     td 
                       button.btn.btn-small.btn-match(ng-click='match(facility)') Match
                     td {{$index+1}}
